; ModuleID = '/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnodeInt.spec.c_taosBuildReqMsgToDnodeWithSize.c'
source_filename = "/home/carl/AnghaBench/TDengine/src/system/lite/src/extr_mgmtDnodeInt.spec.c_taosBuildReqMsgToDnodeWithSize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @taosBuildReqMsgToDnodeWithSize(i32* %0, i8 signext %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8, align 1
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  store i32* %0, i32** %5, align 8
  store i8 %1, i8* %6, align 1
  store i32 %2, i32* %7, align 4
  %9 = load i32, i32* %7, align 4
  %10 = call i64 @malloc(i32 %9)
  %11 = inttoptr i64 %10 to i8*
  store i8* %11, i8** %8, align 8
  %12 = load i8*, i8** %8, align 8
  %13 = icmp eq i8* %12, null
  br i1 %13, label %14, label %15

14:                                               ; preds = %3
  store i8* null, i8** %4, align 8
  br label %20

15:                                               ; preds = %3
  %16 = load i8, i8* %6, align 1
  %17 = load i8*, i8** %8, align 8
  store i8 %16, i8* %17, align 1
  %18 = load i8*, i8** %8, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 1
  store i8* %19, i8** %4, align 8
  br label %20

20:                                               ; preds = %15, %14
  %21 = load i8*, i8** %4, align 8
  ret i8* %21
}

declare dso_local i64 @malloc(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
